# lmdb-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cmake-clang.yml  cmake-gcc.yml  cmake.yml
3p/lmdb_cmake/: CMakeLists.txt
include/cpp_lmdb/: concepts.hpp  cpp_lmdb.hpp  db_item.hpp  dbs.hpp  environment.hpp  error.hpp  iterators.hpp  transactions.hpp  types.hpp  views.hpp
include/cpp_lmdb/details/: api.hpp  details.hpp  key_value_traits.hpp
test/integration/: CMakeLists.txt  test_db_int_keys_and_values.cpp  test_db_operations.cpp  test_db_string_keys_and_values.cpp  test_utils.hpp
test/link_layer_substitution_example/: CMakeLists.txt  test_example.cpp
test/link_time_substitution_example/: CMakeLists.txt  lmdb_mock.cpp  lmdb_mock.hpp
test/unit/: CMakeLists.txt  mocks.hpp  test_create_environment.cpp  test_environment.cpp  test_error_handling_exceptions.cpp  test_error_handling_expected.cpp  test_key_value_traits.cpp  test_transaction.cpp
